# RPi-2

./: .gitignore  CHANGELOG.md  README.md  install.sh  oled-status@.service  pyproject.toml  rpi-gpio@.service
src/: __init__.py  __main__.py  config.py  gpio.py  logger.py  oled_status.py  routes.py  utils.py
static/: main.js  styles.css
systemd/: oled-status@.service  rpi-gpio@.service
templates/: index.html  stream.html
