[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RPi"
version = "1.0.0b0"
description = "Realtime GPIO control interface"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ask Marius Ørbæk Lysgaard", email = "amly@eiva.com" },
    { name = "name" }
]

# Runtime dependencies
dependencies = [
    "Flask>=3.0",
    "flask-socketio>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-flask>=1.3",
    "requests",
]
rpi = [
    "RPi.GPIO",
    "adafruit-blinka",
    "adafruit-circuitpython-ssd1305",
    "pillow",
]

[project.urls]
Repository = "https://github.com/Googool/rpi"
Changelog = "https://github.com/Googool/rpi/blob/main/CHANGELOG.md"
